...
                android:layout_marginTop="8dp"
                android:text="@string/c_def_chal_rew_value"
                app:layout_constraintStart_toEndOf="@+id/chalRewTitle"
                app:layout_constraintTop_toBottomOf="@+id/chalTitle" />

            <TextView
                android:id="@+id/chalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
...
                android:text="@string/c_chal_view_butt"
                android:textColor="@android:color/holo_blue_light"
                app:layout_constraintStart_toEndOf="@+id/chalPic"
                app:layout_constraintTop_toBottomOf="@+id/chalRewTitle" />

            <TextView
                android:id="@+id/chalComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
...
